--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,11 @@
-overwrite: true
-schema: "http://localhost:4000"
+schema: "http://localhost:4000/graphql"
+watch: ["./src/**/*.ts"]
 emitLegacyCommonJSImports: false
 generates:
-  "src/generated/graphql.ts":
+  "./src/gql.ts":
     plugins: ["typescript", "typescript-resolvers"]
+    hooks:
+      afterOneFileWrite:
+        - prettier --write
+  "./schema.json":
+    plugins: ["introspection"]
