--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "vetting-games-api",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "concurrently -n server,codegen \"yarn dev:start\" \"yarn codegen\"",
+    "dev:start": "nodemon",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js",
     "lint": "eslint --ext .ts,.tsx src",
     "format": "prettier --write ./src/**/*.{ts,tsx}",
     "compose": "docker-compose up -d --build",
-    "db:up": "docker-compose up db -d",
+    "db:up": "docker compose up db -d",
     "db:migrate-dev": "prisma migrate dev",
     "db:migrate-reset": "prisma migrate reset",
     "db:migrate-deploy": "prisma migrate deploy",
@@ -23,22 +23,34 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.13.12",
+    "@graphql-codegen/introspection": "^2.2.1",
     "@graphql-codegen/typescript": "2.8.2",
     "@graphql-codegen/typescript-resolvers": "2.7.7",
+    "@playlyfe/gql": "^2.6.2",
+    "@types/cors": "^2.8.12",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "node-dev": "^7.4.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
     "@apollo/server": "^4.1.1",
     "@prisma/client": "4.6.1",
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "prisma": "^4.6.1"
   }
 }
