VG-11: The Game

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+
 GITHUB_CLIENT_ID="[your_oauth_app_client_id]"
 GITHUB_CLIENT_SECRET="[your_oauth_app_client_secret]"
+
+CLIENT_HOST="http://localhost:5173"
 
 JWT_SECRET="$ openssl rand -hex 32"
 JWT_EXPIRATION="7d"
