--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js",
     "lint": "eslint --ext .ts,.tsx src",
-    "format": "prettier --write ./src/**/*.{ts,tsx}",
+    "format": "prettier --write ./src",
     "compose": "docker-compose up -d --build",
     "db:up": "docker compose up db -d",
     "db:migrate-dev": "prisma migrate dev",
@@ -34,6 +34,7 @@
     "concurrently": "^7.6.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "node-dev": "^7.4.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
