--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "codegen": "graphql-codegen"
   },
   "prisma": {
-    "seed": "ts-node-esm prisma/seed.ts"
+    "seed": "ts-node-esm -r tsconfig-paths/register src/seed.ts"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.13.12",
